# screamdeck

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: cmake.yml
example/: screamdeck_example.c
include/: screamdeck.h
src/: screamdeck.c
